2009-02-02  Ulrich Drepper  <drepper@redhat.com>

	[BZ #9793]
	* iconv/gconv_trans.c (__gconv_transliterate): Don't change
	*OUTBUFSTART unless the whole output fit into the buffer.
	* iconv/Makefile (tests): Add tst-iconv4.
	* iconv/tst-iconv4.c: New file.

2009-02-01  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/cacheinfo.c (intel_02_known): Add new descriptors.
	* sysdeps/unix/sysv/linux/i386/sysconf.c (intel_02_known): Likewise.

2009-01-29  Andrew Stubbs  <ams@codesourcery.com>

	* elf/Makefile (ld.so): Adjust the sed script to insert _begin in to
	newer linker scripts.

2009-01-30  Ulrich Drepper  <drepper@redhat.com>

	[BZ #7040]
	* sysdeps/unix/sysv/linux/sys/inotify.h: Second parameter of
	inotify_rm_watch should have type int.

2009-01-06  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/powerpc/powerpc32/fpu/__longjmp-common.S (__longjmp):
	Make aligned_restore_vmx a local symbol.
	* sysdeps/powerpc/powerpc64/__longjmp-common.S (__longjmp):
	Likewise.

2009-01-30  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/bits/shm.h (SHM_EXEC): Define.
	* sysdeps/unix/sysv/linux/ia64/bits/shm.h (SHM_EXEC): Define.
	* sysdeps/unix/sysv/linux/powerpc/bits/shm.h (SHM_EXEC): Define.
	* sysdeps/unix/sysv/linux/s390/bits/shm.h (SHM_EXEC): Define.
	* sysdeps/unix/sysv/linux/sh/bits/shm.h (SHM_EXEC): Define.
	* sysdeps/unix/sysv/linux/sparc/bits/shm.h (SHM_EXEC): Define.
	* sysdeps/unix/sysv/linux/x86_64/bits/shm.h (SHM_EXEC): Define.

2009-01-11  Ryan S. Arnold  <rsa@us.ibm.com>

	[BZ #9726]
	* sysdeps/powerpc/fpu/tst-setcontext-fpscr.c (_SET_DI_FPSCR,
	_SET_SI_FPSCR): Clobber fp0 to prevent erroneous test-case passes.

2009-01-08  Ryan S. Arnold  <rsa@us.ibm.com>

	[BZ #9726]
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/setcontext-common.S
	(__CONTEXT_FUNC_NAME): Fix mtfsf to use fp31 instead of fp0.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/swapcontext-common.S
	(__CONTEXT_FUNC_NAME): Fix mtfsf to use fp31 instead of fp0.
